--- a/new.html
+++ b/new.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Welcome to the </title>
 </head>
 <body>
-    
+    <h1>Future University</h1>
 </body>
 </html>
